--- a/style.css
+++ b/style.css
@@ -12,15 +12,20 @@ body {
     padding: 20px;
     border-radius: 10px;
     width: 260px;
+    padding: 20px;
+  
+    
 }
 
 #pantalla {
-    width: 100%;
-    height: 50px;
+    width: 245px;
+    height: 40px;
     margin-bottom: 10px;
     font-size: 22px;
     text-align: right;
     padding-right: 10px;
+
+    
 }
 
 .botones {
@@ -50,4 +55,24 @@ button:hover {
 .cero {
    /* sirve para que un elemento ocupe más espacio dentro del grid*/
     grid-column: span 2;
+}
+.limpiar{
+    background-color: #9b7ded;
+}
+
+.dividir{
+    background-color: #9b7ded;
+}
+.multiplicar{
+    background-color: #9b7ded;
+}
+
+.sumar{
+    background-color: #9b7ded;
+}
+.igual{
+    background-color: #9b7ded;
+}
+.menos{
+    background-color: #9b7ded;
 }
